@@ -1,3 +1,11 @@
+2013-02-14  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Unreviewed chromium test fix: incorrect field was used for UISourceCode url.
+
+        * src/js/Tests.js:
+        (.TestSuite.prototype.testNoScriptDuplicatesOnPanelSwitch.checkNoDuplicates):
+        (.TestSuite.prototype.uiSourceCodesToString_):
+
 2013-02-14  David Trainor  <dtrainor@chromium.org>
 
         [chromium] No triggering autofill on unfocus
